Improve documentation clarity and sync roxygen outputs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,9 +33,10 @@ Description: Computationally efficient tools for high dimensional predictive
         algorithm, fast iterative soft-thresholding algorithm, and newton method. 
         The computation is further accelerated by warm-start and active-set tricks.
 License: GPL-2
+Encoding: UTF-8
 Repository: CRAN
 NeedsCompilation: yes
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.3
 LinkingTo: Rcpp, RcppEigen
 Packaged: 2021-06-30 17:15:07 UTC; jhaoming
 Date/Publication: 2021-07-01 07:10:27 UTC
